Fixed sidebar wrapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,7 @@ meter::after {
     flex-wrap: wrap;
 }
 
-@media (min-width: 768px){
+@media (min-width: 992px){
 
     #sidebarright {
         float: right;
